--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,5 +5,6 @@
     <p>Made by Adwait Sumbh</p>
   </div>
 </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
